[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UI/ChangeSceneButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/UI/Title.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UI/QuitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/UserInterface.gd" type="Script" id=5]

[node name="UserInterfaceLayer" type="CanvasLayer"]
layer = 100

[node name="UserInterface" type="Control" parent="."]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseOverlay" type="ColorRect" parent="UserInterface"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" parent="UserInterface/PauseOverlay" instance=ExtResource( 3 )]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = -208.0
margin_right = 91.0
margin_bottom = -151.0
text = "Paused"

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -144.0
margin_top = -124.0
margin_right = 144.0
margin_bottom = 124.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumeButton" type="Button" parent="UserInterface/PauseOverlay/VBoxContainer"]
margin_right = 288.0
margin_bottom = 80.0
size_flags_vertical = 3
text = "Resume"

[node name="BackButton" parent="UserInterface/PauseOverlay/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 84.0
margin_right = 288.0
margin_bottom = 164.0
text = "Back to Menu"
next_scene_path = "res://src/Screens/MainScreen.tscn"

[node name="QuitButton" parent="UserInterface/PauseOverlay/VBoxContainer" instance=ExtResource( 4 )]
margin_top = 168.0
margin_right = 288.0
margin_bottom = 248.0

[node name="Label" type="Label" parent="UserInterface"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -222.0
margin_top = 80.0
margin_right = -82.0
margin_bottom = 111.0
text = "Score: %s"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="UserInterface/PauseOverlay/VBoxContainer/ResumeButton" to="UserInterface" method="_on_ResumeButton_button_up"]
[connection signal="button_up" from="UserInterface/PauseOverlay/VBoxContainer/BackButton" to="UserInterface" method="_on_BackButton_button_up"]
